--- a/pages/1.1.md
+++ b/pages/1.1.md
@@ -22,7 +22,7 @@
 5. 优先级排序：优先级排序是一种将决策因素按照其重要性进行排序的方法。决策者可以将不同的因素进行比较，并根据其相对重要性来做出决策。这种方法对于需要权衡多个因素和目标的决策问题特别有用。
 6. 经济分析：经济分析是一种基于经济学原理和方法来评估不同决策选项的方法。它可以通过考虑成本、效益、风险和机会成本等因素来帮助决策者作出经济上理性的选择。
 #### 工业场景中的决策任务
-#### ![image.png](../assets/1.1-1.png)
+![image.png](../assets/1.1-1.png)
 决策问题广泛存在在各个领域，本书介绍的内容主要是面向工业场景中的决策任务。在工业场景中，决策对于优化生产效率、降低成本和推动智能化和可持续发展至关重要。典型的需要决策工业场景包括下面的一些示例：
 
 1. **工业机器人控制**：工业机器人在自动化生产中发挥着重要作用。决策者需要确定机器人的任务分配、路径规划、动作控制等，以最大程度地提高生产效率和质量。优化的机器人控制策略可以减少生产线的停机时间，提高生产速度和准确性，降低人力成本，同时确保工作环境的安全性。
