--- a/pages/2.1.md
+++ b/pages/2.1.md
@@ -1,7 +1,8 @@
 有向无环图是图论中的一个重要概念，它是一种由边和顶点组成的图，其中的边具有方向性，并且从任一顶点出发顺着边的方向走，都不会形成一个环。这种特性使得DAG有着广泛的应用，可以描述和解决复杂的依赖关系问题。
 #### 定义
 有向无环图是由一系列有序的顶点对（u, v）组成的图，其中u是起始顶点，v是终止顶点，这样的有序对被称为图中的一条边。在DAG中，不存在一个顶点集合，使得从集合中的某个顶点出发，经过若干条边后，又回到了原始的顶点，这样的路径称为环。
-![image.png](../assets/2.1-0.png)
+![](../assets/2.1-0.png)
+
 
 #### 特性
 
