--- a/pages/2.2.md
+++ b/pages/2.2.md
@@ -1,4 +1,5 @@
-![image.png](../assets/2.2-0.png)
+![](../assets/2.2-0.png)
+
 #### 因果关系
 在探索复杂现象的内在机制时，因果关系建模成为一种不可或缺的工具。简单的相关性分析只能告诉我们变量之间的关联程度，而无法揭示事件之间的因果关系。因果关系建模的优势在于它提供了一种框架，通过建立模型来描述和量化变量之间的因果关系，从而深入挖掘事件的因果链条。通过构建因果模型，我们能够更好地理解一个变量是如何影响另一个变量的。模型中的因果路径和参数估计提供了关于变量之间因果关系的定量描述。这种定量描述可以告诉我们特定变量的变化如何引起其他变量的变化，以及这种影响的程度和方向。例如，一个因果模型可能揭示了教育水平对收入的影响，通过估计相关参数，我们可以确定每增加一个学历等级，平均收入增加的数量。
 因果关系建模的核心在于理解变量之间的因果效应。这种效应意味着一个变量（原因）的变化会导致另一个变量（结果）的变化。然而，在现实世界中，这种关系往往受到多种因素的影响，包括混杂变量、中介变量和调节变量等。因此，因果关系建模不仅要识别这些变量，还要评估它们对因果效应的潜在影响。
@@ -21,6 +22,7 @@
 - 政策评估：政策制定者可以利用因果关系建模来评估新政策或干预措施的效果。通过模拟不同政策对经济、教育或健康等指标的影响，政策制定者可以做出更加明智的决策。
 #### 因果关系和决策之间的关系
 ![](../assets/2.2-1.jpeg)
+
 因果关系建模与决策密不可分。因果关系建模通过揭示事件、变量或因素之间的因果关系，为决策提供了理解和量化的基础。它在决策过程中发挥下面重要作用：
 
 - 决策依据：因果关系建模提供科学依据，帮助决策者了解不同变量之间的因果关系。这种定量描述为决策提供了依据，使决策者能够预测和评估决策结果。
