--- a/pages/3.3.md
+++ b/pages/3.3.md
@@ -45,7 +45,8 @@ python train.py -df test_data.npz -cf test.yaml -vm tune -pm None --run_id venv_
 ```
 
 执行上述命令之后，REVIVE会自动加载数据进行虚拟环境模型的训练，训练过程中也会持续的输出日志显示训练结果，命令行的输出如下：
-![image.png](../assets/3.3-0.png)
+![](../assets/3.3-0.png)
+
 
 在训练过程中，REVIVE 会持续记录训练日志到日志文件夹中，我们将在下一节中展示如何通过日志文件进行虚拟环境检验。
 
