--- a/pages/3.5.md
+++ b/pages/3.5.md
@@ -122,6 +122,7 @@ python train.py -df ./data/pendulum.npz -cf ./data/pendulum.yaml -rf ./data/pend
 ```
 
 执行上述命令之后，REVIVE会自动加载数据进行虚拟环境模型的训练，训练过程中也会持续的输出日志显示训练结果，命令行的输出如下：
-![image.png](../assets/3.5-0.png)
+![](../assets/3.5-0.png)
+
 
 
