--- a/pages/3.6.md
+++ b/pages/3.6.md
@@ -3,10 +3,12 @@
 在使用REVIVE SDK进行任务学习的过程中，REVIVE会默认将数据集划分为训练数据集和验证数据集，并在这两个数据集上构建相应的虚拟环境。这些虚拟环境被命名为trainEnv和valEnv，对应的数据集为trainData和valData。在策略模型的学习过程中，REVIVE会在trainEnv和valEnv以及对应的数据集trainData和valData上分别进行策略模型的训练。这将产生两个策略模型，分别为trainPolicy和valPolicy。训练结束后，REVIVE SDK会根据用户设定的奖励函数，对trainPolicy在trainEnv和valEnv上以及valPolicy在trainEnv和valEnv上的平均单步奖励进行记录。这些记录将用于生成双重环境验证图，并保存在logs/<run_id>/policy_train(tune/../)/double_validation.png路径下。下面是一个标准的双环境验证图片：
 
 ![](../assets/3.6-0.png)
+
 从上图中我们可以看到，红绿两条线都高于蓝色虚线。这意味着在两个环境中，两种策略得到的奖励数值都高于了历史数据集中的奖励数值。上图中的红线（ reward_trainPolicy_on_trainEnv ）和下图中的绿线（ reward_trainPolicy_on_valEnv ）随着训练轮次的增加有相似的走势。 我们也能从上图中的绿线和下图中的红线发现同样的结果。这表明，训练的 trainPolicy 并没有在其对应训练的虚拟环境 trainEnv 上过拟合。 得到的策略模型可以泛化到其他的环境中。由于 trainPolicy 能够在 valEnv 中有良好的表现，我们可以认为 trainEnv 和 valEnv 有一定的相似性。 这表明在虚拟环境训练时的超参数设置能够在划分的训练数据和验证数据上得到相近且有价值的环境模型。
 
 下面我们来展示一个失败的例子：
 ![](../assets/3.6-1.png)
+
 从图中我们发现，同一策略并没有在两个环境中有相似的表现。另外，两种策略表现都没有稳定地收敛并高于蓝色虚线之上。这说明双环境验证不通过，模型未通过联合检验。一般情况下双环境验证不通过的原因有以下几点：
 
 1. 训练环境与测试环境不一致。如果训练集和测试集中一些维度的数据分布差异较大，那么训练集得到的 trainPolicy 在 valEnv 的表现可能会大打折扣。
@@ -20,4 +22,5 @@
 
 ### 3.6.2 倒立摆控制任务示例
 在上一节中，我们完成了策略模型的训练。下面我们打开对应的双环境验证图片（logs/revive/policy_train/double_validation.png）如下图。可以看到下图是一个较好的双环境验证图片，红线和绿线均稳定超过了蓝线。说明联合检验通过，下面就可以上线到业务场景中了。
-![image.png](../assets/3.6-2.png)
+![](../assets/3.6-2.png)
+
