--- a/pages/4.2.md
+++ b/pages/4.2.md
@@ -4,7 +4,8 @@
 专家函数的引入不仅可以加强模型的能力，还可以帮助模型应对领域特定的挑战和复杂性。专家函数可以提供领域内的先验知识，帮助模型更好地理解数据和任务的背景和上下文，减少对大量标记数据的依赖，同时提高对于新情况和边界情况的处理能力,提高模型的精度。
 
 下面我们以一个简单的示例展示如何使用专家函数：
-![image.png](../assets/4.2-0.png)
+![](../assets/4.2-0.png)
+
 如果我们有上图所示的决策流图，其对应的YAML文件如下：
 ```bash
 metadata:
