--- a/pages/5.5.md
+++ b/pages/5.5.md
@@ -1,7 +1,8 @@
 # 任务背景：
 注射胰岛素是糖尿病治疗的重要手段之一，尤其是对于1型糖尿病患者。1型糖尿病患者通常需要注射胰岛素来控制血糖水平，因为他们的胰岛素分泌功能已经受损，无法产生足够的胰岛素来降低血糖水平。注射胰岛素时，一些患者需要使用胰岛素泵，这是一种能够持续输送胰岛素的设备，本任务使用胰岛素泵进行胰岛素注射。此外，根据作用时间的不同，胰岛素可分为不同种类，包括长效胰岛素、快速作用胰岛素、中等作用胰岛素等。本任务考虑长效胰岛素，它用于糖尿病患者管理血糖水平。与快速作用胰岛素（rapid-acting insulin）相比，长效胰岛素的作用持续时间更长，通常可以持续数小时到一整天，使其适合于维持基础胰岛素水平，帮助控制患者在不同时间段的血糖水平。之后，注射胰岛素的患者通常需要进行频繁的血糖监测，以确保胰岛素剂量的准确性和治疗效果的达到。因此如何调整胰岛素剂量和注射时机，是实现良好的血糖控制是关键因素。
 # 任务介绍
-![image.png](../assets/5.5-0.png)
+![](../assets/5.5-0.png)
+
 胰岛素和人体作用的环境模拟器是基于[simglucose](https://github.com/jxx123/simglucose)实现的。整体模拟器由病人模拟器，场景模拟器，传感器模拟器，胰岛素泵模拟器构成。整体模拟器模拟糖尿病患者从某天早上8点开始，一天内的体内血糖浓度变化。一天中病人会随机进食，吃药。病人吃药以后，药效会在之后若干时间步内逐渐产生作用，从而影响体内各项指标。因此策略目标就是控制胰岛素注射策略使得病人皮下血糖浓度稳定在一定范围。此环境具有时延特性。任务将人体的各项指标简化为31维的连续性数组，胰岛素的注射行为由一个标量表示。
 **血糖监测系统：**
 每隔3分钟会返回一次病人的皮下血糖浓度信息【1维】。此外，血糖监测系统也会返回病人的基础身体属性【30维】。由此构成了31维向量：【血糖浓度，基础身体属性】。
@@ -9,7 +10,8 @@
 每隔3分钟向病人注射一定量基础胰岛素，使其适合于维持基础胰岛素水平，帮助控制患者在不同时间段的血糖水平。
 # 数据介绍
 胰岛素注射任务提供了一批历史的胰岛素注射任务数据进行模型训练。数据中包含15位病人的历史胰岛素注射数据，每个病人都包含多条胰岛素注射数据。历史数据以CSV文件的形式进行存储，每条轨迹包含在一个CSV文件中。下面是一个CSV文件的截图：
-![Screen Shot 2024-03-26 at 5.15.15 PM.png](../assets/5.5-1.png)
+![](../assets/5.5-1.png)
+
 下面是每个CSV文件表头信息的描述：
 
 | **信息名称** | **信息类别** |
@@ -31,7 +33,8 @@
 控制胰岛素注射策略使得病人皮下血糖浓度稳定在一定范围。
 # 解决方案
 胰岛素注射策略优化任务目标是使得不同的病人皮下血糖浓度更加稳定。任务训练数据包含了一批历史的胰岛素注射策略任务数据。由于安全成本巨大，所以不能在真实人体中进行试错学习，我们下面采用离线强化学习工具REVIVE来解决上述任务。REVIVE是一套数据驱动强化学习的工业决策软件，该软件通过利用历史数据来学习最优策略， 而无需与真实环境进行额外交互，从而实现决策过程的自动化并率先实现真实业务的落地。
-![image.png](../assets/5.5-2.png)
+![](../assets/5.5-2.png)
+
 ## 任务分析
 根据先验知识可以知道，胰岛素注射后血糖发生变化的时间延迟主要受到胰岛素吸收速度、作用时间、胰岛素调节血糖的过程以及食物摄入等多种因素的影响，因此这是一个带有不确定性时延的任务。
 根据经验，对于不确定性时延性质的问题，通常可以尝试用循环神经网络或者拼帧来解决。这里我们尝试拼帧方法。再由数据分析中我们可以知道，病人的30维身体属性是几乎不改变的。因此我们考虑只拼帧皮下血糖浓度信息，暂定拼历史10步的信息。并且根据经验，直接预测下一时刻的血糖浓度的效果不如先预测下一时刻与当前时刻血糖浓度的差值，然后通过当前时刻血糖浓度+预测的血糖浓度差值就可以得到下一时刻血糖浓度。
@@ -50,7 +53,8 @@
 ## 构建业务决策流图
 在5.1中我们结合业务知识对胰岛素注射任务进行详细的分析，为了适应REVIVE来解决该任务，我们首先需要将上述的业务逻辑分析转换为决策流图。决策流图是一个有向无环图，用于描述业务数据时序上的交互逻辑。 决策流图中的每个节点代表数据，每条边代表数据之间的映射关系。决策流图可以根据需要来扩展任意多个节点， 节点之间的顺序可以是任意指定的，单个节点可以作为多个节点的输入。
 根据对上述的业务分析，我们构建如下的决策流图。下面的决策流图中action与property节点作为静态变量，[ts_obs, ts_action, property]作为delta_obs的输入，最后我们通过专家函数节点对delta_obs与obs相加即可得到next_obs节点。
-![Screen Shot 2024-03-29 at 11.42.21 AM.png](../assets/5.5-3.png)
+![](../assets/5.5-3.png)
+
 构建完决策流图后,我们通常需要把它组织成yaml文件进行表示,下面就是上述决策流图对应的yaml文件,yaml文件下的graph表示了对应的决策流图:
 ```yaml
 graph:
@@ -826,7 +830,8 @@ python train.py \
 
 ```
 开启训练之后, 命令行会打印如下信息,说明虚拟环境正在训练：
-![Screen Shot 2024-03-29 at 2.28.11 PM.png](../assets/5.5-4.png)
+![](../assets/5.5-4.png)
+
 ## 验证虚拟环境模型的有效性
 REVIVE提供多种工具用于验证环境模型的有效性,其中最常用的两种方法是通过tensorboard查看loss曲线和通过日志查看rollout图片：
 Tensorboard的启动命令如下：
@@ -834,10 +839,13 @@ Tensorboard的启动命令如下：
 tensorboard --logdir=path_to_logs --port 10086
 ```
 Tensorboard提供一个web界面可以查看损失函数的曲线,我们可以查看里面的now_metric 和 least_metric指标来分析模型是否收敛，以及收敛的效果如何。默认情况下metric计算的是轨迹rollout的MAE。least_metri指标越低越好！
-![Screen Shot 2024-03-29 at 3.07.45 PM.png](../assets/5.5-5.png)
-![Screen Shot 2024-03-29 at 3.07.57 PM.png](../assets/5.5-6.png)
+![](../assets/5.5-5.png)
+
+![](../assets/5.5-6.png)
+
 我们还可以打开日志文件夹下的rollout图片文件夹查看每个节点的rollout情况,REVIVE会从数据集中随机采集10条轨迹，进行虚拟环境模型和真实历史数据的对比, 通过rollout图可以直观的分析虚拟环境模型的时序预测误差。rollout图片文件夹默认存储在logs/simglucose-revive-no-action_horizon_100_ts/venv_train/rollout_images文件夹下。红色代表数据中真实的轨迹，绿色代表训练得到的虚拟环境的轨迹。两条轨迹贴合的越紧密越好！
-![0_next_obs.png](../assets/5.5-7.png)
+![](../assets/5.5-7.png)
+
 ## 分析任务目标，定义控制目标优化函数
 REVIVE使用强化学习算法来训练策略模型。在强化学习中，智能体通过不断地与环境交互来寻找最优策略。策略会根据当前状态选择一个行动，并接收相应的奖励以及 下一个状态。这样的过程会不断地进行，直到达到终止状态为止。如果策略在一系列动作和状态转换中获得高额的奖励， 那么它就找到了一种较好的策略。因此，奖励函数的设计对于强化学习策略的优化至关重要。一个好的奖励函数应该能够指导策略向着预期的方向进行学习。
 胰岛素注射任务的目标是通过控制注射胰岛素的量，使得拥有不同身体属性的糖尿病人的血糖都能稳定在安全范围内，期间病人会随机进食。因此奖励函数考虑了病人前后时刻的血糖浓度作为输入，并通过既定的规则保证病人的血糖健康。
