--- a/pages/5.8.md
+++ b/pages/5.8.md
@@ -1,13 +1,16 @@
-![image.png](../assets/5.8-0.png)
+![](../assets/5.8-0.png)
+
 ## 任务背景
 随着社会的发展和科技的进步，工程机械在建设和基础设施领域扮演着重要的角色。挖掘机作为一种常见的工程机械设备，广泛应用于土地平整、土方开挖、基础建设等工程项目中。然而，传统的挖掘机在操作过程中往往需要依赖人工操作，存在着一些局限性和挑战。随着人工智能技术的发展，挖掘机智能化可以提高施工效率、降低风险、节约资源，并促进人机协同，推动工程机械行业向着更加智能、高效和可持续的方向发展。
 ## 任务介绍
 挖掘机智能化的目标是使挖掘机能够通过自主决策和学习来完成任务，这意味着挖掘机需要具备学习和适应能力。然而，与虚拟游戏场景不同，挖掘机等实际设备存在许多物理限制，这些限制使得无法以低成本进行复制、并行和加速，导致强化学习等算法的训练速度和效果受到极大影响。
 为了解决这个问题，一种解决方案是事先收集一定量的挖掘机工作数据，并使用这些数据来训练一个挖掘机的状态转移模型。状态转移模型可以预测挖掘机在不同操作和环境条件下的状态变化。通过使用这个转移模型，算法可以在训练过程中快速地模拟挖掘机在交互环境中的状态变化，实现环境的复制、并行和加速，从而提高训练效率。具体而言，挖掘机的状态转移模型可以接受当前的挖掘机状态作为输入，并预测下一个状态的变化。这个模型可以基于机器学习的方法，如深度神经网络，通过对大量挖掘机工作数据进行训练来学习状态之间的关系。训练完成后，这个模型可以用于算法训练过程中，快速生成虚拟的状态转换序列，模拟挖掘机在不同环境下的行为。通过使用挖掘机状态转移模型，可以克服挖掘机物理限制所带来的问题。这种方法可以降低对实际物理设备的需求，减少训练成本，并且加快算法的训练速度。
 ## 数据介绍
-![image.png](../assets/5.8-1.png)
+![](../assets/5.8-1.png)
+
 现在我们收集了一批挖掘机的工作数据，数据集包含挖掘机各个关节（大臂、小臂、挖斗、座舱）的速度、角速度，关节执行的驱动信号大小和驱动时间，以及执行驱动信号后关节的速度和角速度等信息。收集到的日志按时间段以csv文件进行存在，每个连续时间段的数据存储在一个csv文件中，下面是一个csv文件的部分数据：
-![image.png](../assets/5.8-2.png)
+![](../assets/5.8-2.png)
+
 下面是对CSV文件表头信息的描述：
 
 | **信息名称** | **信息类别** | **信息描述** |
@@ -35,16 +38,19 @@
 任务目标是需要用提供的数据来训练一个挖掘机的状态转移模型，准确地预测挖掘机在不同操作和环境条件下的状态变化。
 ## 解决方案
 任务目标是需要用提供的数据来训练一个挖掘机的状态转移模型。我们采用离线强化学习工具REVIVE来解决上述任务。REVIVE是一套数据驱动强化学习的工业决策软件，该软件通过利用历史数据来学习最优策略， 而无需与真实环境进行额外交互，从而实现决策过程的自动化并率先实现真实业务的落地。
-![image.png](../assets/5.8-3.png)
+![](../assets/5.8-3.png)
+
 ### 任务分析
 我们首先结合对业务环境的理解对任务和数据进行分析，time列提供了时间戳表示时间信息，可以用于确定信息的顺序和时间序列的变化，用于分析数据之间时序上的因果关系。数据中的信息可以分为3大类，第一类是挖掘机的状态信息，包括挖掘各关节的状态信息和观测延迟时间，第二类是动作信息，包液压驱动信号和信号延时。在时序上进行可视化如下：
 ![](../assets/5.8-4.jpeg)
 
 
+
 ### 构建业务决策流图
 #### 定义决策流图
 在5.1中我们结合业务知识和数据进行了分析，为了使用REVIVE来解决该任务，我们首先需要将上述的业务逻辑分析转换为决策流图。决策流图是一个有向无环图，用于描述业务数据时序上的交互逻辑。 决策流图中的每个节点代表数据，每条边代表数据之间的映射关系。决策流图可以根据需要来扩展任意多个节点， 节点之间的顺序可以是任意指定的，单个节点可以作为多个节点的输入。根据对上述的业务分析，我们构建如下的决策流图。其中,delta_obs节点是下一时刻状态和上一时刻状态的差值，obs节点和action节点作为delta_obs节点的输入预测挖掘机状态的变化，然后将delta_obs和obs节点的数据相加计算下一时刻的obs节点的状态信息。
-![image.png](../assets/5.8-5.png)
+![](../assets/5.8-5.png)
+
 构建完决策流图后,我们通常需要把它组织成yaml文件进行表示,下面就是上述决策流图对应的yaml文件,yaml文件下的graph表示了对应的决策流图:
 ```yaml
 graph:
@@ -170,7 +176,8 @@ python train.py -df ./data/rocketrecovery.npz -cf ./data/rocketrecovery.yaml --r
 ```
 
 开启训练之后, 命令行会打印如下信息,说明虚拟环境正在训练:
-![image.png](../assets/5.8-6.png)
+![](../assets/5.8-6.png)
+
 ### 进行虚拟环境模型有效性验证
 REVIVE提供多种工具用于验证环境模型的有效性,其中最常用的两种方法是通过tensorboard查看loss曲线和通过日志查看rollout图片:
 
@@ -179,8 +186,10 @@ Tensorboard的启动命令如下:
 tensorboard --logdir .../logs/revive
 ```
 Tensorboard提供一个web界面可以查看损失函数的曲线,我们可以查看里面的now_metric 和 least_metric指标来分析模型是否收敛,以及收敛的效果如何,默认情况下metric计算的是轨迹rollout的MAE。
-![image.png](../assets/5.8-7.png)
+![](../assets/5.8-7.png)
+
 
 我们还可以打开日志文件夹下的rollout图片文件夹查看每个节点的rollout情况,REVIVE会从数据集中随机采集10条轨迹，进行虚拟环境模型和真实历史数据的对比, 通过rollout图可以直观的分析虚拟环境模型的时序预测误差。rollout图片文件夹默认存储在logs/revive/venv_train/rollout_images文件夹下。
-![image.png](../assets/5.8-8.png)
+![](../assets/5.8-8.png)
+
 
