--- a/pages/1.4.md
+++ b/pages/1.4.md
@@ -17,7 +17,8 @@ $ docker pull polixir/revive-sdk
 ```
 
 安装完成后可以使用revive version命令查看当前的revive版本：
-![image.png](../assets/1.4-0.png)
+![](../assets/1.4-0.png)
+
 #### 获得完整授权
 Polixir 研发了 REVIVE SDK，并对其中部分模块拥有完全知识产权，因此这部分模块已经通过加密进行了保护， 但这并不影响用户的正常使用。你可以在 REVIVE 官网注册免费帐户并获得授权后使用完整算法包内的所有功能。
 获得授权的步骤分为以下两步:
@@ -31,7 +32,8 @@ REVIVE 官网 : 进入REVIVE官网 [https://www.revive.cn](https://www.revive.cn
 ```yaml
 revive register your_key
 ```
-![image.png](../assets/1.4-1.png)
+![](../assets/1.4-1.png)
+
 
 - 方式2：手动打开配置文件进行key配置。完成REVIVE SDK安装后，会自动生成配置文件（配置文件路径：/home/<user-name>/.revive/config.yaml ）， 打开配置文件并将之前的密钥Key填入其中。
 ```python
