--- a/pages/3.2.md
+++ b/pages/3.2.md
@@ -1,13 +1,16 @@
 ### 3.2.1 构建决策流图
 上一节中我们介绍了数据采集，有了原始的业务数据之后我们需要结合业务知识进行决策流图设计，并将数据按照设计好的决策流图进行处理存储。为例将现实任务场景的业务逻辑数字化，REVIVE通过构建决策流图来描述业务数据之间的关系。
 决策流图是REVIVE的核心工具，它可以通过图的方式展示了不同业务数据之间的关联和流动。这种方式使得人们能够更直观地理解和分析业务数据之间的逻辑关系。决策流图的构建基于对现实任务场景的深入研究和分析，确保了图中的每个节点和边都准确地反映了业务数据之间的关系。基于决策流图和相关的业务数据，REVIVE 可以训练虚拟环境模型。这个虚拟模型完全遵照了决策流图所定义的业务数据之间的逻辑。通过使用这个虚拟环境模型，用户可以在模拟的场景中进行各种实验和测试，以便更好地理解和优化业务流程。REVIVE中的决策流图是一个有向无环图，有向无环图（DAG）是一种由有序的顶点对（u, v）组成的图，其中u是起始顶点，v是终止顶点。这些有序对被称为图中的边。有向无环图的特点是没有循环或回路。
-![image.png](../assets/3.2-0.png)
+![](../assets/3.2-0.png)
+
 REVIVE使用有向无环图描述业务数据的交互逻辑。 图中的每个节点代表数据，每条边代表数据之间的映射关系，输入决定输出。决策流图可以根据需要来扩展任意多个节点， 节点之间的顺序可以是任意指定的，单个节点可以作为多个节点的输入。 我们可以使用决策流图来描述智能体在环境中的决策过程，下图展示了一个简单的强化学习任务示例的决策流图。假设环境观测被表示为obs，智能体采取的动作为action，而在智能体采取动作之后，新的环境观测为next_obs。
-![image.png](../assets/3.2-1.png)
+![](../assets/3.2-1.png)
+
 
 通过构建决策流图，我们可以清晰地展示这些节点之间的关系。在上图中，obs节点指向action节点，表示action节点的输出取决于obs节点的输入。这个关系反映了智能体在做出动作时需要基于先前的环境观测作出决策的先验知识。换句话说，obs作为因，action作为果，obs为action的输入。类似地，obs节点和action节点共同指向next_obs节点。这表示obs节点和action节点的联合决定了next_obs节点的值。也就是说，智能体的动作和当前的环境观测共同决定了下一个环境观测的状态。这样的决策流图帮助我们更好地理解和分析强化学习任务中的信息流动。它显示了智能体如何根据环境观测做出决策，并且展示了环境观测、动作和下一个环境观测之间的因果关系。通过使用决策流图，我们能够更加直观地理解智能体在强化学习任务中的行为，并且可以基于图中的关系进行进一步的分析和优化。
 在REVIVE中,决策流图是一个循环调用的过程，它在多个时间步上运行。 在每个时间步中，决策流图会完整地运行一次。在这个过程中， next_* 节点会被视为转移节点， 对应的数据将作为下一个时间步的 * 节点输入使用。举例说明：t时间步的 next_obs 节点数据会作为t+1时间步的 obs 节点数据。 以下动画展示了REVIVE SDK是如何在时间步上进行决策流图的循环调用。
 ![](../assets/3.2-2.gif)
+
 ### 使用YAML文件存储决策流图 
 在上述步骤,我们完成了决策流图的设计, 我们需要一种方法把设计出的决策流图固定下来。REVIVE使用YAML文件来存储决策流图。YAML文件主要包括两个属性 graph 和 columns, 其中 graph 描述了数据节点之间的关系, columns 描述了数据的每个节点所属数据维度的属性。
 
@@ -86,6 +89,7 @@ save_h5("data.h5", data)
 ### 3.2.3 倒立摆控制任务示例
 为了构建倒立摆任务的决策流图，我们需要对任务进行详细的分析。 在倒立摆控制任务中，我们可以观察到摆杆的状态信息（包括摆末端的坐标和角速度）, 智能体需要控制施加到摆的扭矩来影响摆的状态。在时序上进行数据可视化如下:
 ![](../assets/3.2-3.jpeg)
+
 根据我们对倒立摆任务的了解可以进行以下的分析:
 
 1. 摆的力矩(控制信息) 应该根据当前摆的状态来调整。
@@ -93,8 +97,10 @@ save_h5("data.h5", data)
 
 根据上述分析,我们构建下面的业务逻辑关系, t_n时刻的状态信息和控制信息会共同影响到t_(n+1)时刻的状态信息。t_n时刻的控制信息应该根据t_n时刻的状态信息来确定。我们在下图中用箭头表明这些业务关系。
 ![](../assets/3.2-4.jpeg)
+
 根据上述分析我们可以构建如下的决策流图：
-![image.png](../assets/3.2-5.png)
+![](../assets/3.2-5.png)
+
 
 构建完成决策流图之后，我们需要使用一个YAML文件来存储决策流图，其中graph来定义决策流图的结构，columns存储了途中每个节点包含的数据，上述决策流图对应的YAML文件如下：
 ```bash
