--- a/pages/5.2.md
+++ b/pages/5.2.md
@@ -1,8 +1,10 @@
 ![](../assets/5.2-0.jpeg)
+
 ## 任务背景
 飞行器悬停控制是在航空领域中的一项重要技术，旨在实现飞行器在空中保持稳定的位置和高度，而不受外界干扰的影响。悬停控制对于无人机、直升机和垂直起降飞行器等各种飞行器类型都至关重要。飞行器的悬停控制任务背景源于多个方面。首先，无人机的广泛应用使得悬停能力成为一项必要的技术，例如在航拍、搜救、物流等领域。无人机在悬停时需要对风速、气压和外界干扰等因素进行实时响应，以保持稳定的位置和高度。其次，直升机作为传统的垂直起降飞行器，其悬停控制任务一直是研究的重点。直升机需要克服旋翼和尾桨产生的气流以及其他不稳定因素，以保持平稳的悬停状态。悬停控制任务对于直升机的安全性和操作效率至关重要，尤其是在紧急救援、军事作战等关键任务中。通过研究和开发悬停控制算法和系统，可以提高飞行器的悬停能力，实现更安全、高效的飞行操作，拓展飞行器在各个领域的应用潜力。
 ## 任务介绍
-![rule_result (1).gif](../assets/5.2-1.gif)
+![](../assets/5.2-1.gif)
+
 飞行器悬停控制任务是基于Gym中的Lunar Lander任务改造而成的, 任务简化3维坐标系为2维坐标系。任务的目标是将飞行器悬停在目标位置的目标高度。控制系统可以通过控制飞行器引擎来改变飞行器的飞行姿态。控制引擎采用离散的动作空间，共有四个可用的独立动作：不采取任何动作、启动左引擎、启动主引擎和启动右引擎。飞行器的状态观测空间是一个4维向量，包括着陆器的x轴坐标、y轴坐标、x轴线速度和y轴线速度。任务目标是使得飞行器能够稳定悬停目标点位于（0,1）。如果飞行器的坐标和目标坐标的偏差小于0.2，则认为悬停是成功的。
 当前系统中已经存在一个基于物理规则对飞行器进行控制的策略，这个策略是基于飞行器的坐标对控制引擎进行操作，通过比较 y 坐标和 x 坐标的绝对值大小，确定飞行器是更接近垂直方向还是水平方向的目标点。如果飞行器更接近垂直方向的目标点（即 |y| >= |x|），则根据 y 的正负值选择动作。如果 y 大于 0，则返回动作 0，表示不采取任何动作；如果 y 小于等于 0，则返回动作 2，表示启动右引擎。如果飞行器更接近水平方向的目标点（即 |x| > |y|），则根据 x 的正负值选择动作。如果 x 大于 0，则返回动作 1，表示启动左引擎；如果 x 小于等于 0，则返回动作 3，表示启动右引擎。这样，通过基于飞行器的坐标与目标点的位置关系来选择动作，该策略可以帮助飞行器朝着目标点移动并尽可能接近目标点位置。下面是该规则策略的代码实现：
 ```yaml
@@ -23,7 +25,8 @@ def rule_policy(data):
 ```
 ## 数据介绍
 当前的规则控制策略已经运行了一段时间，系统记录了一系列相关的历史数据。历史数据以CSV文件的形式进行存储。下面是日志文件的截图:
-![image.png](../assets/5.2-2.png)
+![](../assets/5.2-2.png)
+
 
 | **信息名称** | **信息类别** | **信息描述** |
 | --- | --- | --- |
@@ -38,11 +41,13 @@ def rule_policy(data):
 任务目标是使得飞行器能够稳定悬停目标点位于（0,1）。如果飞行器的坐标和目标坐标的偏差小于0.2，则认为悬停是成功的。已有的规则策略的控制效果不理想，在部分情况下不能稳定有效的将飞行器控制在目标点。
 ## 解决方案
 们希望能够基于上述的历史数据直接优化控制策略提升控制效果。我们采用离线强化学习工具REVIVE来解决上述任务。REVIVE是一套数据驱动强化学习的工业决策软件，该软件通过利用历史数据来学习最优策略， 而无需与真实环境进行额外交互，从而实现决策过程的自动化并率先实现真实业务的落地。
-![image.png](../assets/5.2-3.png)
+![](../assets/5.2-3.png)
+
 ### 任务分析
 我们首先结合对火箭系统的理解对任务和数据进行分析，time列提供了时间戳表示时间信息，可以用于确定信息的顺序和时间序列的变化，用于分析数据之间时序上的因果关系。
 数据中的信息可以分为2大类，第一类是飞行器的状态信息，包括飞行器的位置信息和速度信息，第二类是的控制信息，包括引擎推力。在时序上进行可视化如下：
 ![](../assets/5.2-4.jpeg)
+
 根据业务知识对上述2类信息之间的关系进行分析：
 
 1. 状态信息(state)：飞行器的状态信息受到多方面因素的影响，飞行器的状态会受到的引擎推力和重力的共同影响发生改变，这种改变在观测信息上具有时滞性，例如t_n时刻的飞行器的状态会受到当前时刻的引擎推力和重力影响，在未来的t_(n+1)时刻产生状态信息变化。
@@ -50,11 +55,13 @@ def rule_policy(data):
 
 根据上述的分析，我们构建了下面的业务逻辑关系，t_n时刻的状态信息，控制信息和环境风力信息会共同影响到t_(n+1)时刻的状态信息。t_n时刻的控制信息应该根据t_n时刻的状态信息和环境风力信息来确定。我们在下图中用箭头表明这些业务关系。
 ![](../assets/5.2-5.jpeg)
+
 ### 构建业务决策流图
 #### 定义决策流图
 在5.1中我们结合业务知识对火箭回收任务进行详细的分析，为了适应REVIVE来解决该任务，我们首先需要将上述的业务逻辑分析转换为决策流图。决策流图是一个有向无环图，用于描述业务数据时序上的交互逻辑。 决策流图中的每个节点代表数据，每条边代表数据之间的映射关系。决策流图可以根据需要来扩展任意多个节点， 节点之间的顺序可以是任意指定的，单个节点可以作为多个节点的输入。
 根据对上述的业务分析，我们构建如下的决策流图。下面的决策流图中,state(飞行器状态)节点作为power(控制节点)的输入,表示了引擎的推力应该根据当前的飞行器状态信息来确定。状态转移后的飞行器状态表示下一时刻的飞行状态,决策流图中的当前时间的state(飞行器状态)节点和_power(控制节点)都会影响该状态转移,因此全部指向状态转移节点。
-![image.png](../assets/5.2-6.png)
+![](../assets/5.2-6.png)
+
 构建完决策流图后,我们通常需要把它组织成yaml文件进行表示,下面就是上述决策流图对应的yaml文件,yaml文件下的graph表示了对应的决策流图:
 ```yaml
 graph:
@@ -149,7 +156,8 @@ python train.py -df ./data/hover.npz -cf ./data/hover.yaml --run_id revive -vm o
 ```
 
 开启训练之后, 命令行会打印如下信息,说明虚拟环境正在训练:
-![image.png](../assets/5.2-7.png)
+![](../assets/5.2-7.png)
+
 ### 进行虚拟环境模型有效性验证
 REVIVE提供多种工具用于验证环境模型的有效性,其中最常用的两种方法是通过tensorboard查看loss曲线和通过日志查看rollout图片:
 
@@ -158,10 +166,12 @@ Tensorboard的启动命令如下:
 tensorboard --logdir .../logs/revive
 ```
 Tensorboard提供一个web界面可以查看损失函数的曲线,我们可以查看里面的now_metric 和 least_metric指标来分析模型是否收敛,以及收敛的效果如何,默认情况下metric计算的是轨迹rollout的MAE。
-![image.png](../assets/5.2-8.png)
+![](../assets/5.2-8.png)
+
 
 我们还可以打开日志文件夹下的rollout图片文件夹查看每个节点的rollout情况,REVIVE会从数据集中随机采集10条轨迹，进行虚拟环境模型和真实历史数据的对比, 通过rollout图可以直观的分析虚拟环境模型的时序预测误差。rollout图片文件夹默认存储在logs/revive/venv_train/rollout_images文件夹下。
-![image.png](../assets/5.2-9.png)
+![](../assets/5.2-9.png)
+
 ### 分析任务目标，定义控制目标优化函数
 REVIVE使用强化学习算法来训练策略模型。在强化学习中，智能体通过不断地与环境交互来寻找最优策略。策略会根据当前状态选择一个行动，并接收相应的奖励以及 下一个状态。这样的过程会不断地进行，直到达到终止状态为止。如果策略在一系列动作和状态转换中获得高额的奖励， 那么它就找到了一种较好的策略。因此，奖励函数的设计对于强化学习策略的优化至关重要。一个好的奖励函数应该能够指导策略向着预期的方向进行学习。
 控制策略的任务目标使得飞行器能够稳定悬停目标点位于（0,1）。如果飞行器的坐标和目标坐标的偏差小于0.2，则认为悬停是成功的。
@@ -182,10 +192,12 @@ python train.py -df ./data/hover.npz -cf ./data/hover.yaml -rf ./data/hover_rewa
 ```
 
 开启训练之后, 命令行会打印如下信息,说明策略正在训练:
-![image.png](../assets/5.2-10.png)
+![](../assets/5.2-10.png)
+
 ### 进行策略模型有效性验证
 在使用REVIVE SDK进行任务学习的过程中，默认情况下，REVIVE会将数据集进行切分，并分为训练数据集以及验证数据集（参考 数据准备）。 并在这两个数据集上分别构建虚拟环境，并命名为 trainEnv 和 valEnv。 在随后的策略模型学习过程中，REVIVE会在 trainEnv 和 valEnv 两个环境以及对应的数据集 trainData 和 valData 中分别进行策略模型的训练， 训练出各自的策略模型 trainPolicy 和 valPolicy。在训练过程中，REVIVE SDK会在训练结束后，依据用户设定的 奖励函数 ， 对 trainPolicy 在 trainEnv 和 valEnv``上，以及 ``valPolicy 在 trainEnv 和 valEnv 上所获得的平均单步奖励进行记录， 并在训练结束后生成双重环境验证图,默认的存储路径是 logs/<run_id>/policy_train/double_validation.png 。下面双环境验证图片种蓝色虚线是对历史数据使用降落函数计算得到的单步奖励平均值。从图中我们可以看到,红绿两条线都高于蓝色虚线。这意味着在两个环境中，两种策略得到的奖励数值都高于了历史数据集中的奖励数值。
-![image.png](../assets/5.2-11.png)
+![](../assets/5.2-11.png)
+
 双环境验证是一种用于评估策略模型性能的方法。它涉及将训练和测试环境定义为两个不同的环境。 在训练期间，智能体使用一个环境进行学习；而在测试期间，它必须在另一个环境中进行操作，该环境可能与训练环境略有不同。 通过这种方式，双重环境验证可以检测出策略模型过度拟合特定的环境。 如果训练环境和测试环境非常相似，那么模型可能会在测试环境中表现良好。 但如果测试环境与训练环境有明显区别，则模型可能无法泛化到新环境中。 因此，双环境验证可以帮助用户确定评估策略模型的实际效果，并检查它们是否具有适应不同环境的能力。
 ### 策略模型上线测试
 策略模型会被序列化为 policy.pkl 和onnx文件。使用策略模型时需要使用 pickle 加载序列化的决策模型， 然后使用 policy.infer() 函数进行策略模型推理。
