--- a/pages/5.4.md
+++ b/pages/5.4.md
@@ -1,4 +1,5 @@
-![pressure-water-line-100707995-large.webp](../assets/5.4-0.webp)
+![](../assets/5.4-0.webp)
+
 ## 1.任务背景
 管道流量控制系统是一种用于监测调节管道中流体的系统。它的主要目的是确保管道中的流量保持在预设的范围内，以满足生产需求或确保系统的安全运行。管道流量控制系统可以实现稳定、准确地控制管道中的流量，以满足生产需求，并确保系统的安全运行。这对于许多工业应用，如化工厂、石油和天然气输送管道、水处理系统等非常重要。一个典型的管道流量控制系统通常包括以下组件：
 流量传感器：用于测量管道中的流量。这些传感器可以基于不同的原理，如涡轮、超声波、电磁等，来监测流体的流动速度和体积。
@@ -6,10 +7,12 @@
 控制器：控制器是管道流量控制系统的核心部分，它接收流量传感器的信号，并根据设定的控制策略和算法来计算并控制阀门的开度。
 ## 2.任务介绍
 ![](../assets/5.4-1.jpeg)
+
 如上图所示,管道流量控制系统需要控制入口的控制阀调节入口的流量, 经过一段时间之后影响到出口流量实现流量控制, 目标流量是一个不定期发生变化的随机值, 控制器需要在目标值发生变化之后快速的调节入口控制阀将出口流量调整到目标流量附近。在管道流量控制系统中，由于管道长度较长，控制阀的控制和流量计的测量之间存在较大的时滞影响, 即对入口控制阀的调整不能马上反应到出口的流量变化上,直接根据出口的流量对控制阀进行调节很容易出现过调的现象。因此要求控制器应能处理时滞带来的观测影响,预估控制阀调整后的管道流量,避免出现过调。
 ## 3.数据介绍
 管道流量控制系统提供了一批日志数据用于构建控制模型以提供更优的控制效果。数据存储一个CSV表中,下面是一个表信息的示例:
-![image.png](../assets/5.4-2.png)
+![](../assets/5.4-2.png)
+
 表中包含下列几类信息:
 
 | **信息名称** | **信息类别** | **信息描述** |
@@ -26,9 +29,11 @@
 ## 5.解决方案
 管道流量控制系统需要通过调节管道入口的控制阀来影响管道中的流量,使得管道出口的流量尽快的靠近目标流量。任务训练数据包含了一批日志数据用于模型训练。由于成本巨大，所以不能在业务环境中进行试错学习，我们下面采用离线强化学习工具REVIVE来解决上述任务。REVIVE是一套数据驱动强化学习的工业决策软件，该软件通过利用历史数据来学习最优策略， 而无需与真实环境进行额外交互，从而实现决策过程的自动化并率先实现真实业务的落地。
 ![](../assets/5.4-3.png?x-oss-process=image%2Fformat%2Cwebp%2Fresize%2Cw_1565%2Climit_0)
+
 ### 5.1 任务分析
 首先根据对数据的分析整理出如下的时序节点图(time列提供了时间戳表示时间信息，可以用于确定信息的顺序和时间序列的变化，用于帮助分析数据之间时序上的因果关系):
 ![](../assets/5.4-4.jpeg)
+
 
 结合数据和对管道系统的了解,我们做出以下的分析:
 
@@ -40,11 +45,13 @@
 根据以上的分析构建节点之间的因果关系如下:
 ![](../assets/5.4-5.jpeg)
 
+
 ### 5.2 构建业务决策流图
 #### 5.2.1 构建决策流图
 在5.1中我们结合业务知识对管道控制系统进行详细的分析，为了适应REVIVE来解决该任务，我们首先需要将上述的分析业务逻辑分析转换为决策流图。决策流图是一个有向无环图，用于描述业务数据时序上的交互逻辑。 决策流图中的每个节点代表数据，每条边代表数据之间的映射关系。决策流图可以根据需要来扩展任意多个节点， 节点之间的顺序可以是任意指定的，单个节点可以作为多个节点的输入。
 根据对上述的业务分析，我们构建如下的决策流图:
-![image.png](../assets/5.4-6.png)
+![](../assets/5.4-6.png)
+
 构建完决策流图后,我们通常需要把它组织成yaml文件进行表示,下面就是上述决策流图对应的yaml文件,yaml文件下的graph表示了对应的决策流图:
 ```yaml
   graph:
@@ -589,7 +596,8 @@ python train.py -df ./data/pipeline.npz -cf ./data/pipeline.yaml -rcf ./data/con
 ```
 
 开启训练之后, 命令行会打印如下信息,说明虚拟环境正在训练:
-![image.png](../assets/5.4-7.png)
+![](../assets/5.4-7.png)
+
 ### 5.5 进行虚拟环境模型有效性验证
 REVIVE提供多种工具用于验证环境模型的有效性,其中最常用的两种方法是通过tensorboard查看loss曲线和通过日志查看rollout图片:
 
@@ -599,9 +607,11 @@ tensorboard --logdir .../logs/pipeline
 ```
 
 Tensorboard提供一个web界面可以查看损失函数的曲线,我们可以查看里面的now_metric 和 least_metric指标来分析模型是否收敛,以及收敛的效果如何,默认情况下metric计算的是轨迹rollout的MAE。
-![image.png](../assets/5.4-8.png)
+![](../assets/5.4-8.png)
+
 我们还可以打开日志文件夹下的rollout图片文件夹查看每个节点的rollout情况,REVIVE会从数据集中随机采集10条轨迹，进行虚拟环境模型和真实历史数据的对比, 通过rollout图可以直观的分析虚拟环境模型的时序预测误差。rollout图片文件夹默认存储在logs/bc/venv_train/rollout_images文件夹下。
-![image.png](../assets/5.4-9.png)
+![](../assets/5.4-9.png)
+
 ### 5.6 分析任务目标，定义控制目标优化函数
 REVIVE使用强化学习算法来训练策略模型。在强化学习中，智能体通过不断地与环境交互来寻找最优策略。策略会根据当前状态选择一个行动，并接收相应的奖励以及 下一个状态。这样的过程会不断地进行，直到达到终止状态为止。如果策略在一系列动作和状态转换中获得高额的奖励， 那么它就找到了一种较好的策略。因此，奖励函数的设计对于强化学习策略的优化至关重要。一个好的奖励函数应该能够指导策略向着预期的方向进行学习。
 管道流量控制系统需要通过调节管道入口的控制阀来影响管道中的流量,使得管道出口的流量尽快的靠近目标流量。由于控制阀和出口之间存在控制时滞,因此控制策略需要根据历史观察信息和控制信息来预估控制阀的影响。
@@ -648,10 +658,12 @@ python train.py -df ./data/pipeline.npz -cf ./data/pipeline.yaml -rcf ./data/con
 ```
 
 开启训练之后, 命令行会打印如下信息,说明策略正在训练:
-![image.png](../assets/5.4-10.png)
+![](../assets/5.4-10.png)
+
 ### 5.8 进行策略模型有效性验证
 在使用REVIVE SDK进行任务学习的过程中，默认情况下，REVIVE会将数据集进行切分，并分为训练数据集以及验证数据集（参考 数据准备）。 并在这两个数据集上分别构建虚拟环境，并命名为 trainEnv 和 valEnv。 在随后的策略模型学习过程中，REVIVE会在 trainEnv 和 valEnv 两个环境以及对应的数据集 trainData 和 valData 中分别进行策略模型的训练， 训练出各自的策略模型 trainPolicy 和 valPolicy。在训练过程中，REVIVE SDK会在训练结束后，依据用户设定的 奖励函数 ， 对 trainPolicy 在 trainEnv 和 valEnv``上，以及 ``valPolicy 在 trainEnv 和 valEnv 上所获得的平均单步奖励进行记录， 并在训练结束后生成双重环境验证图,默认的存储路径是 logs/<run_id>/policy_train/double_validation.png 。下面双环境验证图片种蓝色虚线是对历史数据使用降落函数计算得到的单步奖励平均值。从图中我们可以看到,红绿两条线都高于蓝色虚线。这意味着在两个环境中，两种策略得到的奖励数值都高于了历史数据集中的奖励数值。
-![image.png](../assets/5.4-11.png)
+![](../assets/5.4-11.png)
+
 双环境验证是一种用于评估策略模型性能的方法。它涉及将训练和测试环境定义为两个不同的环境。 在训练期间，智能体使用一个环境进行学习；而在测试期间，它必须在另一个环境中进行操作，该环境可能与训练环境略有不同。 通过这种方式，双重环境验证可以检测出策略模型过度拟合特定的环境。 如果训练环境和测试环境非常相似，那么模型可能会在测试环境中表现良好。 但如果测试环境与训练环境有明显区别，则模型可能无法泛化到新环境中。 因此，双环境验证可以帮助用户确定评估策略模型的实际效果，并检查它们是否具有适应不同环境的能力。
 ### 5.9 策略模型上线测试
 策略模型会被序列化为 policy.pkl 和onnx文件。使用策略模型时需要使用 pickle 加载序列化的决策模型， 然后使用 policy.infer() 函数进行策略模型推理。
